--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.4",
     "typescript": "^4.9.5",
